[gd_scene load_steps=25 format=2]

[ext_resource path="res://dudes/Rhino/Rhino.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/units/Tank/Front/blue/Go_right_0002.png" type="Texture" id=2]
[ext_resource path="res://assets/units/Tank/Front/blue/Go_right_0001.png" type="Texture" id=3]
[ext_resource path="res://assets/units/Tank/Right/blue/Go_right_0002.png" type="Texture" id=4]
[ext_resource path="res://assets/units/Tank/Right/blue/Go_right_0001.png" type="Texture" id=5]
[ext_resource path="res://assets/units/Tank/Back/red/Go_right_0001.png" type="Texture" id=6]
[ext_resource path="res://assets/units/Tank/Back/red/Go_right_0002.png" type="Texture" id=7]
[ext_resource path="res://assets/units/Tank/Back/blue/Go_right_0002.png" type="Texture" id=8]
[ext_resource path="res://assets/units/Tank/Back/blue/Go_right_0001.png" type="Texture" id=9]
[ext_resource path="res://assets/units/Tank/Front/red/Go_right_0001.png" type="Texture" id=10]
[ext_resource path="res://assets/units/Tank/Front/red/Go_right_0002.png" type="Texture" id=11]
[ext_resource path="res://assets/units/Tank/Right/red/Go_right_0001.png" type="Texture" id=12]
[ext_resource path="res://assets/units/Tank/Right/red/Go_right_0002.png" type="Texture" id=13]
[ext_resource path="res://dudes/Tank/Tank.gd" type="Script" id=14]
[ext_resource path="res://assets/effects/healing/get_healed_0003.png" type="Texture" id=15]
[ext_resource path="res://assets/effects/healing/get_healed_0001.png" type="Texture" id=16]
[ext_resource path="res://assets/effects/healing/get_healed_0002.png" type="Texture" id=17]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Tank" instance=ExtResource( 1 )]
script = ExtResource( 14 )
regular_sprites_front = SubResource( 1 )
enemy_sprites_front = SubResource( 2 )
regular_sprites_back = SubResource( 3 )
enemy_sprites_back = SubResource( 4 )
regular_sprites = SubResource( 5 )
enemy_sprites = SubResource( 6 )

[node name="Left_Top" type="Position2D" parent="." index="0"]
position = Vector2( -23.2238, -11.9865 )

[node name="Left_Bottom" type="Position2D" parent="." index="1"]
position = Vector2( -23.2238, 26.2204 )

[node name="Right_Top" type="Position2D" parent="." index="2"]
position = Vector2( 22.7762, -12.4865 )

[node name="Right_Bottom" type="Position2D" parent="." index="3"]
position = Vector2( 22.7762, 25.7204 )

[node name="AnimatedSprite" parent="." index="4"]
frame = 2

[node name="Healing" type="AnimatedSprite" parent="." index="9"]
visible = false
frames = SubResource( 7 )

[node name="OilTimer" type="Timer" parent="." index="11"]
wait_time = 0.5

[connection signal="animation_finished" from="Healing" to="." method="_on_Healing_animation_finished"]
[connection signal="timeout" from="OilTimer" to="." method="_on_OilTimer_timeout"]
